--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -120,7 +120,11 @@ afterEvaluate {
 }
 
 
-//参考资料：https://blog.csdn.net/lucky_tom/article/details/120738113
+//参考资料：
+// https://blog.csdn.net/lucky_tom/article/details/120738113
+//https://developer.android.google.cn/studio/build/maven-publish-plugin?hl=en#groovy
+//https://docs.gradle.org/current/userguide/publishing_maven.html#publishing_maven:tasks
+
 
 
 
